terminacion de la pagina de vecs o sare ya no se, se agregaron los estilos de presentacion, se agregaron las innterfaces para dispositivos moviles y se agregaron las imagenes e informacion para que se pueda mostrar, se requiere cambiar la entrada a documentacion y que esta sea por base de datos.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-nav></app-nav>
 <app-slider></app-slider>
 <app-rounded-images></app-rounded-images>
+<app-informacion></app-informacion>
 <app-documentos></app-documentos>
 <app-contactos></app-contactos>
 <app-footer></app-footer>
