los links ya son funcionales, falta el logo nuevo en lugar de sare

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer-content">
         <div class="logo">
-            <a href="https://www.facebook.com/" target="_blank">
+            <a href="https://www.facebook.com/Morol3on/" target="_blank">
               <img src="../../assets/img/logo-contactos/logo-f.png" alt="Logo Facebook">
             </a>
           </div>
