--- a/src/app/rounded-images/rounded-images.component.html
+++ b/src/app/rounded-images/rounded-images.component.html
@@ -4,16 +4,19 @@
   </div>
   <div class="image-container">
     <div class="rounded-image">
-      <img src="../../assets/img/paginas/team1.jpg" alt="Imagen 1" />
+      <a href="https://www.facebook.com/Morol3on/" target="_blank" ><img src="../../assets/img/paginas/team1.jpg" alt="Imagen 1" /></a>
+      
     </div>
     <div class="rounded-image">
-      <img src="../../assets/img/paginas/team2.jpg" alt="Imagen 2" />
+      <a href="http://transparencia.moroleon.gob.mx/" target="_blank"> <img src="../../assets/img/paginas/team2.jpg" alt="Imagen 2" /></a>
+     
     </div>
     <div class="rounded-image">
+      <a href="http://finanzas.moroleon.gob.mx/" target="_blank"></a>
       <img src="../../assets/img/paginas/team3.jpg" alt="Imagen 3" />
     </div>
     <div class="rounded-image">
-      <img src="../../assets/img/paginas/team4.jpg" alt="Imagen 4" />
+      <a href="http://sare.moroleon.gob.mx/" target="_blank"><img src="../../assets/img/paginas/team4.jpg" alt="Imagen 4" /></a>
     </div>
   </div>
 </div>
