--- a/src/app/rounded-images/rounded-images.component.css
+++ b/src/app/rounded-images/rounded-images.component.css
@@ -23,6 +23,7 @@ body {
     height: 100px;
     border-radius: 50%;
     overflow: hidden;
+    align-items: center;
     margin: 0;
   }
   
@@ -50,7 +51,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     background-color: #f0f0f0;
     
   }
@@ -60,7 +61,7 @@ body {
     flex-direction: column; /* Cambio a columna */
     justify-content: center; /* Alineación vertical en el centro */
     align-items: center; /* Alineación horizontal en el centro */
-    width: 650px;
+    width: 100%;
     margin: 0; /* Margen izquierdo reducido */
   
     }
@@ -71,6 +72,7 @@ body {
     border-radius: 50%;
     overflow: hidden;
     margin: 10px; /* Espaciado entre imágenes */
+    align-items: center;
 
   }
   
@@ -78,6 +80,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    align-items: center;
   }
   
   .texto {
