--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <app-slider></app-slider>
 <app-rounded-images></app-rounded-images>
 <app-informacion></app-informacion>
+<app-informacion-pequena></app-informacion-pequena>
 <app-documentos></app-documentos>
 <app-contactos></app-contactos>
+<app-mapa></app-mapa>
 <app-footer></app-footer>
