--- a/src/app/informacion/informacion.component.html
+++ b/src/app/informacion/informacion.component.html
@@ -1,4 +1,4 @@
-  <div class="container">
+  <div class="container ocultarGrande">
     <div class="content">
       <h1>¿Qué es Vecs?</h1>
       <p>VECS del municipio de Moroleón, Gto es creada para ser el medio entre los usuarios y las dependencias involucradas en la expedición de la licencia de construcción de bajo impacto y riesgo.</p>
