--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,3 +1,3 @@
-<nav class="navigation-bar">
+<nav class="navigation-bar fixed-top">
     <img class="logo" src="../../assets/img/logo300.png">
 </nav>
