--- a/src/app/documentos/documentos.component.html
+++ b/src/app/documentos/documentos.component.html
@@ -6,49 +6,23 @@
     <br />
     <h3>EN SOLO 24 HORAS</h3>
   </div>
-  <div class="principal">
-    <div class="card">
-      <div class="header"></div>
-      <div class="info">
-        <p class="title">PROCESO DE PAGO</p>
-        <p>
-          Documento necesario para validar el pago de los tramites.
-        </p>
-      </div>
-      <div class="footer">
-        <p class="tag">© Moroleon</p>
-        <button type="button" class="action"(click)="abrirArchivo()">Descargar
-        </button>
-      </div>
-    </div>
-    <div class="card">
-      <div class="header"></div>
-      <div class="info">
-        <p class="title">Formato de Uso de Suelo</p>
-        <p>
-          A través de este trámite cualquier persona física o moral obtiene autorización para llevar a cabo actividades de bajo impacto al interior en un inmueble.
-        </p>
-      </div>
-      <div class="footer">
-        <p class="tag">© Moroleon</p>
-        <button type="button" class="action" (click)="abrirArchivo3()">Descargar</button>
+  <div class="row justify-content-md-center">
+    <div class="col-md-3 col-sm-6 " *ngFor="let documento of listadoVecs">
+      <div class="card">
+        <div class="header"></div>
+        <div class="info">
+          <p class="title">{{documento.titulo}}</p>
+          <p>
+            {{documento.informacion}}
+          </p>
+        </div>
+        <div class="footer">
+          <p class="tag">© Moroleon</p>
+          <button type="button" class="action"><a target="_blank"
+              [href]="convertBinaryToUrl(documento.archivoPdf)">Desacargar</a>
+          </button>
+        </div>
       </div>
     </div>
-    <div class="card">
-      <div class="header"></div>
-      <div class="info">
-        <p class="title">Cat&aacute;logo de giros</p>
-        <p>
-            Catologo de las distintas categorias de uso de suelo. 
-        </p>
-      </div>
-      <div class="footer">
-        <p class="tag">© Moroleon</p>
-        <button type="button" class="action"(click)="abrirArchivo2()">Descargar
-          <a href="../../assets/documentos/catalogo.pdf"></a>
-        </button>
-      </div>
-    </div>
- 
   </div>
 </div>
