se caambian los colores para evitar confucines con el pan.

--- a/src/app/documentos/documentos.component.html
+++ b/src/app/documentos/documentos.component.html
@@ -19,7 +19,7 @@
         <div class="footer">
           <p class="tag">© Moroleon</p>
           <button type="button" class="action"><a target="_blank"
-              [href]="convertBinaryToUrl(documento.archivoPdf)">Descargar</a>
+              [href]="convertBinaryToUrl(documento.archivoPdf)" style="color: white;">Descargar</a>
           </button>
         </div>
       </div>
